@@ -39,6 +39,7 @@
 #include "gtksourceview-typebuiltins.h"
 #include "gtksourcemark.h"
 #include "gtksourceview.h"
+#include "gtksourcecompletion.h"
 
 /*
 #define ENABLE_DEBUG
@@ -131,6 +132,8 @@ struct _GtkSourceViewPrivate
 
 	GdkColor         current_line_color;
 	guint            current_line_color_set : 1;
+	
+	GtkSourceCompletion	*completion;
 };
 
 
@@ -711,6 +714,7 @@ gtk_source_view_init (GtkSourceView *view)
 	view->priv->smart_home_end = GTK_SOURCE_SMART_HOME_END_DISABLED;
 	view->priv->right_margin_pos = DEFAULT_RIGHT_MARGIN_POSITION;
 	view->priv->cached_right_margin_pos = -1;
+	view->priv->completion = _gtk_source_completion_new (GTK_TEXT_VIEW (view));
 
 	gtk_text_view_set_left_margin (GTK_TEXT_VIEW (view), 2);
 	gtk_text_view_set_right_margin (GTK_TEXT_VIEW (view), 2);
@@ -781,6 +785,9 @@ gtk_source_view_finalize (GObject *object)
 
 	if (view->priv->mark_categories)
 		g_hash_table_destroy (view->priv->mark_categories);
+	
+	if (view->priv->completion != NULL)
+		g_object_unref (view->priv->completion);
 
 	set_source_buffer (view, NULL);
 
@@ -3981,4 +3988,20 @@ gtk_source_view_update_style_scheme (GtkSourceView *view)
 		else
 			view->priv->style_scheme_applied = FALSE;
 	}
+}
+
+/**
+ * gtk_source_view_get_completion:
+ * @view: a #GtkSourceView
+ *
+ * Gets the #GtkSourceCompletion associated with @view.
+ *
+ * Returns: the #GtkSourceCompletion associated with @view.
+ */
+GtkSourceCompletion *
+gtk_source_view_get_completion (GtkSourceView *view)
+{
+	g_return_val_if_fail (GTK_IS_SOURCE_VIEW (view), NULL);
+	
+	return view->priv->completion;
 }
